# flexi-extensions

./: CMakeLists.txt  CMakeListsLib.txt  CMakeListsMachine.txt
cmake/: SetLibraries.cmake
posti/: CMakeLists.txt
posti/avg2D/: posti_avg2D.f90
posti/mc/fieldsolution/: CMakeLists.txt  mc.f90  mc_output.f90  mc_vars.f90  posti_mc.f90
posti/mlmc/bodyforces/: CMakeLists.txt  combinelevels.f90  estimatesigma.f90  mlmc_input.f90  mlmc_output.f90  mlmc_swapmesh_vars.f90  mlmc_vars.f90
posti/mlmc/combinelevels/: CMakeLists.txt  combinelevels.f90  combinelevels_output.f90  combinelevels_vars.f90
posti/mlmc/estimatesigma/: CMakeLists.txt  estimatesigma.f90  estimatesigma_output.f90  estimatesigma_readstate.f90  estimatesigma_vars.f90
posti/mlmc/fieldsolution/: CMakeLists.txt  combinelevels.f90  estimatesigma.f90  mlmc_input.f90  mlmc_output.f90  mlmc_vars.f90
posti/mlmc/recordpoints/combinelevels/: CMakeLists.txt  combinelevels_rp.f90  combinelevels_rp_input.f90  combinelevels_rp_output.f90  combinelevels_rp_vars.f90
posti/mlmc/recordpoints/estimatesigma/: CMakeLists.txt  estimatesigma_rp.f90  estimatesigma_rp_input.f90  estimatesigma_rp_output.f90  estimatesigma_rp_vars.f90
posti/nisp/computemodes/: CMakeLists.txt  nisp.f90  nisp_output.f90  nisp_vars.f90
posti/nisp/fieldsolution/: CMakeLists.txt  nisp.f90  nisp_output.f90  nisp_vars.f90  posti_nisp.f90
posti/nisp/ini/: parameter_nisp.ini
posti/nisp/recordpoints/: CMakeLists.txt  nisp_rp.f90  nisp_rp_old.f90  nisp_rp_output.f90  nisp_rp_vars.f90  posti_nisp_rp.f90
posti/recordpoints/visualize/: CMakeLists.txt  visualizerecordpoints.f90
posti/recordpoints/visualize/fft/: spec.f90
posti/recordpoints/visualize/interpolation/: interpolation.f90
posti/recordpoints/visualize/navierstokes/: equationrp.f90
posti/recordpoints/visualize/rpdata/: rpdata.f90
posti/sorticingsides/: CMakeLists.txt  posti_sorticingsides.f90  sorticingsides.f90
posti/swapmesh/: swapmesh.f90
posti/swim/: CMakeLists.txt  swim.f90  swim_vars.f90  swimsolver.f90
posti/visu/: calc.f90  converttovisu.f90  readstate.f90  visu.f90  visu_vars.f90  visumesh.f90
posti/visu/paraviewReader/: visuReader.cxx  visuReader.h  visuReader.xml
src/: CMakeLists.txt  commit.h  flexi.h  flexibatch.f90  flexilib.f90
src/analyze/: analyze.f90  analyze_vars.f90
src/dg/: dg.f90  dg_vars.f90  fillflux.f90  surfint.t90  volint.f90
src/dg/br1/: br1.f90  br1_fillflux.f90  br1_surfint.f90
src/dg/br2/: br2.f90  br2_fillflux.f90  br2_surfint.f90  br2_vars.f90
src/dg/lifting/: lifting_volint.t90
src/equations/linearacoustic/: analyze_equation.f90  analyze_equation_vars.f90  baseflow.f90  baseflow_vars.f90  calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  riemann.f90  sources.f90  sources_vars.f90  timeavg.f90
src/equations/linearacoustic/dummy/: eos.f90  eos.h  exactfunc.f90  exactfunc_vars.f90  getboundaryflux.f90
src/equations/linearacoustic/tmp/: acsourceterms.f90  acsourceterms_vars.f90
src/equations/linearscalaradvection/: calctimestep.f90  flux.f90  getboundaryflux.f90  riemann.f90
src/equations/navierstokes/: analyze_equation.f90  analyze_equation_vars.f90  calcbodyforces.f90  calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  riemann.f90  splitflux.f90  timeavg.f90
src/equations/navierstokes/eddyVisc/: eddyVisc.f90  eddyVisc_vars.f90
src/equations/navierstokes/idealgas/: eos.f90  eos.h  eos_posti.f90  eos_posti_vars.f90  exactfunc.f90  exactfunc_vars.f90  getboundaryflux.f90
src/equations/rans_sa/: calctimestep.f90  flux.f90  riemann.f90
src/equations/rans_sa/idealgas/: getboundaryflux.f90
src/fft/: fft.f90  fft_vars.f90  fftw.f90
src/filter/: filter.f90  filter_vars.f90  hplimiter.f90  pplimiter.f90
src/fv/: fv.f90  fv_blending.f90  fv_metrics.f90  fv_reconstruction.f90  fv_vars.f90  fv_volint.f90
src/gcl/: gcl.f90  gcl_fillflux.f90  gcl_surfint.f90  gcl_vars.f90  gcl_volint.f90
src/globals/: commandlinearguments.f90  globals.f90  mathtools.f90
src/icesurf/: icesurf.f90  icesurf_vars.f90
src/indicator/: indicator.f90
src/interpolation/: prolongtoface.t90
src/io_hdf5/: batchinput_vars.f90  hdf5_input.f90  hdf5_output.f90  io_hdf5.f90
src/mesh/: mesh.f90  mesh_readin.f90  mesh_vars.f90  metrics.f90  movemesh.f90  movemesh_mortar.f90  movemesh_vars.f90  prepare_mesh.f90
src/mortar/: fillmortar.f90  fillmortar.t90  fillmortar_mesh.f90  fillmortar_sm.t90  mortar.f90  mortar_metrics.f90  mortar_vars.f90
src/mpi/: mpi.f90  mpi_vars.f90
src/output/: output.f90
src/readintools/: options.f90  readintools.f90  stringtools.f90
src/recordpoints/: recordpoints.f90  recordpoints_vars.f90
src/relexi/: smartredis.f90  smartredis_vars.f90
src/restart/: restart.f90  restart_vars.f90
src/sm/: sm.f90  sm_vars.f90
src/sponge/: sponge.f90
src/testcase/channel/: testcase.f90  testcase_vars.f90
src/testcase/default/: testcase.f90
src/testcase/hit/: testcase.f90  testcase_vars.f90
src/testcase/phill/: testcase.f90
src/timedisc/: timedisc.f90  timedisc_func.f90  timedisc_vars.f90  timestep.f90
tools/generate_ice_shapes_and_mesh/: commons.py  get_pca_modes.py  make_mesh.py
tools/generate_ice_shapes_and_mesh/report/: README
tools/userblock/: generateuserblock.sh
tutorials/freestream/: parameter_flexi.ini
tutorials/monopole/: CART_2D_mesh.h5  parameter_flexi.ini  parameter_hopr.ini
tutorials/slidingmesh/circular_interface/: parameter_flexi.ini  parameter_hopr.ini
tutorials/slidingmesh/planar_and_radial_interface/: parameter_flexi.ini  parameter_hopr_2D.ini  parameter_hopr_3D.ini
tutorials/slidingmesh/shu_vortex_1/: parameter_flexi.ini  parameter_flexi_TestConservativity.ini  parameter_hopr.ini  parameter_hopr_NoOrientZ.ini  parameter_hopr_filled.ini
tutorials/slidingmesh/truncated_cone_in_box/: TruncatedConeInBox_mesh.h5  parameter.ini  parameter_hopr.ini  truncated_cone_in_box.ansa  truncated_cone_in_box.cgns  truncated_cone_in_box_facesplit_NGeo2.cgns  truncated_cone_in_box_facesplit_NGeo4.cgns
tutorials/tensorflow/: parameter_flexi_tf.ini
(+51 files in other folders)
